changed server.java,main.java,added default-get.html